--- a/config/train_mixed.yaml
+++ b/config/train_mixed.yaml
@@ -1,19 +1,21 @@
 wandb: {}
-project_name: middlebury
-restore_ckpt: "./sceneflow.pth"
+project_name: mixed
+restore_ckpt: None
 # restore_ckpt: "/data2/cjd/mono_fusion/checkpoints/sceneflow.pth"
-logdir: './checkpoints/middlebury/'
-encoder: 'vits'
-batch_size: 2
-train_datasets: ['middlebury_finetune']
-lr: 1e-4
+logdir: './checkpoints/mixed/'
+encoder: 'vitl'
+batch_size: 1
+gradient_accumulation_steps: 4
+train_datasets: ['mixed']
+lr: 2e-4
 wdecay: 1e-5
-total_step: 100000
-save_frequency: 1000
-save_path: './checkpoints/middlebury/'
-val_frequency: 1000
+total_step: 800000
+save_frequency: 4000
+save_path: './checkpoints/mixed/'
+val_frequency: 4000
 # image_size: [352, 896]
 image_size: [480, 640]
+# image_size: [608, 800]
 train_iters: 20
 valid_iters: 32
 val_dataset: 'kitti'
@@ -26,8 +28,8 @@ hidden_dims: [128, 128, 128]
 # max_disp: 768
 max_disp: 576
 saturation_range: [0.0, 1.4]
-do_flip: False
+do_flip: True
 spatial_scale: [-0.2, 0.4]
-noyjitter: True
+noyjitter: False
 num_gpu: 1
 seed: 666
