--- a/config/train_sceneflow.yaml
+++ b/config/train_sceneflow.yaml
@@ -2,8 +2,8 @@ wandb: {}
 project_name: sceneflow
 restore_ckpt: None
 logdir: './checkpoints/sceneflow/'
-encoder: 'vitl'
-batch_size: 12
+encoder: 'vits'
+batch_size: 3
 train_datasets: ['sceneflow']
 lr: 2e-4
 wdecay: 1e-5
@@ -26,5 +26,5 @@ saturation_range: [0.7, 1.3]
 do_flip: False
 spatial_scale: [-0.2, 0.5]
 noyjitter: True
-num_gpu: 4
+num_gpu: 1
 seed: 666
