--- a/config/train_transparent2.yaml
+++ b/config/train_transparent2.yaml
@@ -1,16 +1,17 @@
 wandb: {}
-project_name: middlebury
-restore_ckpt: "./sceneflow.pth"
+project_name: transparent3
+restore_ckpt: "./checkpoints/transparent-2-370000.pth"
 # restore_ckpt: "/data2/cjd/mono_fusion/checkpoints/sceneflow.pth"
-logdir: './checkpoints/middlebury/'
+logdir: './checkpoints/transparent3/'
 encoder: 'vits'
-batch_size: 2
-train_datasets: ['middlebury_finetune']
-lr: 1e-4
+batch_size: 1
+gradient_accumulation_steps: 4
+train_datasets: ['transparent']
+lr: 5e-5
 wdecay: 1e-5
 total_step: 100000
 save_frequency: 1000
-save_path: './checkpoints/middlebury/'
+save_path: './checkpoints/transparent3/'
 val_frequency: 1000
 # image_size: [352, 896]
 image_size: [480, 640]
@@ -26,8 +27,8 @@ hidden_dims: [128, 128, 128]
 # max_disp: 768
 max_disp: 576
 saturation_range: [0.0, 1.4]
-do_flip: False
+do_flip: True
 spatial_scale: [-0.2, 0.4]
-noyjitter: True
+noyjitter: False
 num_gpu: 1
 seed: 666
