add DINOv3 as encoder

--- a/config/train_sceneflow.yaml
+++ b/config/train_sceneflow.yaml
@@ -2,8 +2,8 @@ wandb: {}
 project_name: sceneflow
 restore_ckpt: None
 logdir: './checkpoints/sceneflow/'
-encoder: 'vitl'
-batch_size: 12
+encoder: 'dinov3_vitl14'
+batch_size: 3
 train_datasets: ['sceneflow']
 lr: 2e-4
 wdecay: 1e-5
